--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Alvaro Marques Ramos",
   "license": "ISC",
   "paths": {
-  "src": {
+    "src": {
       "base": "./src/",
       "css": "./src/css/",
       "fontello": "./src/fontello/",
@@ -17,16 +17,17 @@
       "json": "./src/json/",
       "js": "./src/js/",
       "img": "./src/img/",
-      "scss": "./src/scss/"
-  },
-  "dist": {
+      "pug": "./src/pug/",
+      "sass": "./src/sass/"
+    },
+    "dist": {
       "base": "./public/",
       "css": "./public/css/",
       "js": "./public/js/",
       "fonts": "./public/fonts/",
       "img": "./public/img/"
-  },
-  "build": {
+    },
+    "build": {
       "base": "./build/",
       "css": "./build/css/",
       "fontello": "./build/fonts/fontello/",
@@ -34,27 +35,28 @@
       "js": "./build/js/",
       "html": "./build/html/",
       "img": "./build/img/"
-  },
-  "favicon": {
+    },
+    "favicon": {
       "src": "./src/img/favicon_src.png",
       "dest": "./public/img/site/",
       "path": "/img/site/"
-  },
-  "scss": [],
-  "templates": "./craft/templates/"
+    },
+    "scss": [],
+    "templates": "./craft/templates/"
   },
   "urls": {
-  "live": "https://nystudio107.com/",
-  "local": "https://nystudio107.dev/",
-  "critical": "https://nystudio107.com/"
+    "live": "https://nystudio107.com/",
+    "local": "https://nystudio107.dev/",
+    "critical": "https://nystudio107.com/"
   },
   "vars": {
-  "siteCssName": "site.combined.min.css",
-  "scssName": "style.scss",
-  "cssName": "style.css"
+    "pugName": "index.pug",
+    "siteCssName": "site.combined.min.css",
+    "sassName": "style.scss",
+    "cssName": "style.css"
   },
   "globs": {
-  "distCss": [
+    "distCss": [
       "./node_modules/normalize.css/normalize.css",
       "./node_modules/flexboxgrid/dist/flexboxgrid.min.css",
       "./node_modules/vue2-autocomplete/dist/style/vue2-autocomplete.css",
@@ -62,66 +64,66 @@
       "./build/fonts/fontello/css/fontello-codes.css",
       "./build/css/*.css",
       "./src/css/*.css"
-  ],
-  "img": [
+    ],
+    "img": [
       "./public/img/"
-  ],
-  "components": [
+    ],
+    "components": [
       "./src/components/**/*.vue"
-  ],
-  "fonts": [
+    ],
+    "fonts": [
       "./build/fonts/fontello/font/*.{eot,ttf,woff,woff2}",
       "./src/fonts/*.{eot,ttf,woff,woff2}"
-  ],
-  "critical": [
+    ],
+    "critical": [
       {
-          "url": "",
-          "template": "index"
+        "url": "",
+        "template": "index"
       },
       {
-          "url": "blog/stop-using-htaccess-files-no-really",
-          "template": "blog/_entry"
+        "url": "blog/stop-using-htaccess-files-no-really",
+        "template": "blog/_entry"
       },
       {
-          "url": "blog/stop-using-htaccess-files-no-really",
-          "template": "blog/_amp_entry"
+        "url": "blog/stop-using-htaccess-files-no-really",
+        "template": "blog/_amp_entry"
       },
       {
-          "url": "blog",
-          "template": "blog/index"
+        "url": "blog",
+        "template": "blog/index"
       },
       {
-          "url": "blog",
-          "template": "blog/amp_index"
+        "url": "blog",
+        "template": "blog/amp_index"
       },
       {
-          "url": "offline",
-          "template": "offline"
+        "url": "offline",
+        "template": "offline"
       },
       {
-          "url": "wordpress",
-          "template": "wordpress"
+        "url": "wordpress",
+        "template": "wordpress"
       },
       {
-          "url": "404",
-          "template": "404"
+        "url": "404",
+        "template": "404"
       }
-  ],
-  "download": [
+    ],
+    "download": [
       {
-          "url": "https://www.google-analytics.com/analytics.js",
-          "dest": "./public/js/"
+        "url": "https://www.google-analytics.com/analytics.js",
+        "dest": "./public/js/"
       },
       {
-          "url": "https://static.small.chat/messenger.css",
-          "dest": "./public/css/"
+        "url": "https://static.small.chat/messenger.css",
+        "dest": "./public/css/"
       },
       {
-          "url": "https://static.small.chat/messenger.js",
-          "dest": "./public/js/"
+        "url": "https://static.small.chat/messenger.js",
+        "dest": "./public/js/"
       }
-  ],
-  "distJs": [
+    ],
+    "distJs": [
       "./build/js/*.js",
       "./node_modules/lazysizes/lazysizes.min.js",
       "./node_modules/lazysizes/plugins/bgset/ls.bgset.min.js",
@@ -129,8 +131,8 @@
       "./node_modules/vue/dist/vue.min.js",
       "./node_modules/vue2-autocomplete/dist/vue2-autocomplete.js",
       "./node_modules/vue-resource/dist/vue-resource.min.js"
-  ],
-  "prismJs": [
+    ],
+    "prismJs": [
       "./node_modules/prismjs/prism.js",
       "./node_modules/prismjs/components/prism-markup.js",
       "./node_modules/prismjs/components/prism-apacheconf.js",
@@ -141,11 +143,11 @@
       "./node_modules/prismjs/components/prism-bash.js",
       "./node_modules/prismjs/components/prism-javascript.js",
       "./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.min.js"
-  ],
-  "babelJs": [
+    ],
+    "babelJs": [
       "./src/js/*.js"
-  ],
-  "inlineJs": [
+    ],
+    "inlineJs": [
       "./node_modules/fg-loadcss/src/loadCSS.js",
       "./node_modules/fg-loadcss/src/cssrelpreload.js",
       "./node_modules/fontfaceobserver/fontfaceobserver.js",
@@ -154,12 +156,13 @@
       "./src/js/register-service-worker.js",
       "./src/js/asyncload-blog-fonts.js",
       "./src/js/asyncload-site-fonts.js"
-  ],
-  "siteIcon": "./public/img/site/favicon.*"
+    ],
+    "siteIcon": "./public/img/site/favicon.*"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
+    "browser-sync": "^2.26.3",
     "chalk": "^1.1.3",
     "critical": "^1.1.0",
     "fancy-log": "^1.2.0",
@@ -183,6 +186,7 @@
     "gulp-newer": "^1.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-print": "^2.0.1",
+    "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "0.5.4",
     "gulp-rev": "^7.1.0",
