--- a/package.json
+++ b/package.json
@@ -160,19 +160,19 @@
     "siteIcon": "./public/img/site/favicon.*"
   },
   "devDependencies": {
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.16.0",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
     "browser-sync": "^2.26.3",
     "chalk": "^1.1.3",
-    "critical": "^1.1.0",
+    "critical": "1.3.4",
+    "del": "^3.0.0",
     "fancy-log": "^1.2.0",
     "git-rev-sync": "^1.7.1",
     "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.2",
+    "gulp-autoprefixer": "6.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-cached": "^1.1.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-cssnano": "^2.1.2",
+    "gulp-concat": "^2.6.1",
     "gulp-debug": "^2.1.2",
     "gulp-download": "^0.0.1",
     "gulp-favicons": "^2.2.6",
@@ -184,17 +184,19 @@
     "gulp-livereload": "^4.0.1",
     "gulp-load-plugins": "^1.3.0",
     "gulp-newer": "^1.2.0",
-    "gulp-plumber": "^1.1.0",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.0",
     "gulp-print": "^2.0.1",
     "gulp-pug": "^4.0.1",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "^1.4.0",
     "gulp-replace": "0.5.4",
+    "gulp-responsive": "^2.12.0",
     "gulp-rev": "^7.1.0",
-    "gulp-sass": "^2.1.0",
+    "gulp-sass": "^4.0.2",
     "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.2.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-streamify": "1.0.2",
-    "gulp-uglify": "^1.5.4",
+    "gulp-uglify": "3.0.1",
     "moment": "^2.14.1",
     "pa11y": "^4.11.0",
     "vinyl-source-stream": "^1.1.0",
