--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "browser-sync": "^2.26.3",
     "critical": "1.3.4",
     "del": "^3.0.0",
+    "git-rev-sync": "^1.12.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-cached": "^1.1.1",
@@ -180,6 +181,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "3.0.1",
+    "moment": "^2.23.0"
   },
   "dependencies": {
     "fg-loadcss": "^1.2.0",
