--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
   "author": "Alvaro Marques Ramos",
   "license": "ISC",
   "paths": {
@@ -165,20 +169,27 @@
     "browser-sync": "^2.26.3",
     "critical": "1.3.4",
     "del": "^3.0.0",
+    "fancy-log": "^1.3.3",
     "git-rev-sync": "^1.12.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-cached": "^1.1.1",
+    "gulp-changed": "^3.2.0",
     "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
     "gulp-debug": "^2.1.2",
+    "gulp-header": "^2.0.7",
     "gulp-load-plugins": "^1.3.0",
+    "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
+    "gulp-print": "^5.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-responsive": "^2.12.0",
     "gulp-rev": "^7.1.0",
     "gulp-sass": "^4.0.2",
+    "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "3.0.1",
     "moment": "^2.23.0"
