--- a/package.json
+++ b/package.json
@@ -132,10 +132,7 @@
       "./build/js/*.js",
       "./node_modules/lazysizes/lazysizes.min.js",
       "./node_modules/lazysizes/plugins/bgset/ls.bgset.min.js",
-      "./node_modules/picturefill/dist/picturefill.min.js",
-      "./node_modules/vue/dist/vue.min.js",
-      "./node_modules/vue2-autocomplete/dist/vue2-autocomplete.js",
-      "./node_modules/vue-resource/dist/vue-resource.min.js"
+      "./node_modules/picturefill/dist/picturefill.min.js"
     ],
     "prismJs": [
       "./node_modules/prismjs/prism.js",
@@ -157,10 +154,7 @@
       "./node_modules/fg-loadcss/src/cssrelpreload.js",
       "./node_modules/fontfaceobserver/fontfaceobserver.js",
       "./node_modules/loadjs/dist/loadjs.min.js",
-      "./node_modules/tiny-cookie/tiny-cookie.min.js",
-      "./src/js/register-service-worker.js",
-      "./src/js/asyncload-blog-fonts.js",
-      "./src/js/asyncload-site-fonts.js"
+      "./node_modules/tiny-cookie/tiny-cookie.min.js"
     ],
     "siteIcon": "./public/img/site/favicon.*"
   },
@@ -179,7 +173,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-debug": "^2.1.2",
+    "gulp-filter": "^5.1.0",
     "gulp-header": "^2.0.7",
+    "gulp-if": "^2.0.2",
     "gulp-load-plugins": "^1.3.0",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
@@ -193,6 +189,7 @@
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "3.0.1",
+    "jspm": "^0.16.53",
     "moment": "^2.23.0",
     "prismjs": "^1.15.0",
     "sass-lint": "^1.12.1"
@@ -207,5 +204,13 @@
     "parse5": "^5.1.0",
     "picturefill": "^3.0.2",
     "tiny-cookie": "^1.0.1"
+  },
+  "jspm": {
+    "dependencies": {},
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
+    }
   }
 }
