--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "gulp-debug": "^2.1.2",
     "gulp-favicons": "^2.3.0",
     "gulp-filter": "^5.1.0",
+    "gulp-fontello": "^0.5.0",
     "gulp-header": "^2.0.7",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^2.0.2",
