Add Critical task

--- a/config.json
+++ b/config.json
@@ -63,5 +63,9 @@
     "pugName": "**/*.pug",
     "htmlName": "**/*.html",
     "includesName": "_includes{,/**}"
-  }
+  },
+  "critical": [
+    "index.html",
+    "blog/index.html"
+  ]
 }
