--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "browser-sync": "^2.26.3",
+    "chalk": "^2.4.2",
     "critical": "1.3.4",
     "del": "^3.0.0",
     "fancy-log": "^1.3.3",
