--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fancy-log": "^1.3.3",
     "git-rev-sync": "^1.12.0",
     "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^3.2.0",
