Remove unused dependecies

--- a/package.json
+++ b/package.json
@@ -57,13 +57,10 @@
   },
   "dependencies": {
     "fg-loadcss": "^1.2.0",
-    "flexboxgrid": "^6.3.1",
     "fontfaceobserver": "^2.0.5",
     "lazysizes": "^2.0.6",
     "loadjs": "^3.3.1",
     "normalize.css": "^5.0.0",
-    "parse5": "^5.1.0",
-    "picturefill": "^3.0.2",
-    "tiny-cookie": "^1.0.1"
+    "picturefill": "^3.0.2"
   }
 }
