--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "gulp-changed": "^3.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
-    "gulp-debug": "^2.1.2",
     "gulp-favicons": "^2.3.0",
-    "gulp-filter": "^5.1.0",
     "gulp-fontello": "^0.5.0",
     "gulp-header": "^2.0.7",
     "gulp-htmlmin": "^5.0.1",
@@ -39,21 +37,16 @@
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-print": "^5.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-responsive": "^2.12.0",
-    "gulp-rev": "^7.1.0",
     "gulp-sass": "^4.0.2",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svgmin": "^2.1.0",
     "gulp-uglify": "3.0.1",
     "gulp.spritesmith": "^6.9.0",
-    "modularscale-sass": "^3.0.8",
-    "moment": "^2.23.0",
-    "prismjs": "^1.15.0",
-    "sass-lint": "^1.12.1"
+    "modularscale-sass": "^3.0.8"
   },
   "dependencies": {
     "fg-loadcss": "^1.2.0",
