--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "gulp-svgmin": "^2.1.0",
     "gulp-uglify": "3.0.1",
     "gulp.spritesmith": "^6.9.0",
-    "modularscale-sass": "^3.0.8"
+    "modularscale-sass": "^3.0.8",
+    "moment": "^2.24.0"
   },
   "dependencies": {
     "fg-loadcss": "^1.2.0",
